--- a/travelRecommendation/travel_recommendation.html
+++ b/travelRecommendation/travel_recommendation.html
@@ -1,10 +1,12 @@
 <html>
-    <head>
-        <title> gototravles </title>
-          <link rel="stylesheet" href="./tr.css">
-    </head>
-    <body>
-         <nav>
+<head>
+  <title>gototravels</title>
+  <link rel="stylesheet" href="./tr.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+</head>
+<body>
+
+  <nav>
     <ul>
       <li><a href="travel_recommendation.html">Home</a></li>
       <li><a href="aboutus.html">About Us</a></li>
@@ -16,6 +18,7 @@
       </li>
     </ul>
   </nav>
+
   <div class="homepage-content">
     <h1>Welcome to Travel Explorer 🌍</h1>
     <p>
@@ -29,5 +32,10 @@
       <a href="#"><i class="fab fa-youtube"></i></a>
     </div>
   </div>
-    </body>
+
+  <!-- ✅ This is where cards will be injected -->
+  <div id="results" class="results-container"></div>
+
+  <script src="travel_recommendation.js"></script>
+</body>
 </html>
