--- a/travelRecommendation/travel_recommendation.html
+++ b/travelRecommendation/travel_recommendation.html
@@ -6,18 +6,20 @@
 </head>
 <body>
 
-  <nav>
-    <ul>
-      <li><a href="travel_recommendation.html">Home</a></li>
-      <li><a href="aboutus.html">About Us</a></li>
-      <li><a href="contact.html">Contact Us</a></li>
-      <li class="search-bar">
-        <input type="text" placeholder="Search..." id="searchInput">
-        <button onclick="search()">Search</button>
-        <button onclick="reset()">Reset</button>
-      </li>
-    </ul>
-  </nav>
+  <nav class="navbar">
+  <div class="nav-left">
+    <a href="travel_recommendation.html">Home</a>
+    <a href="aboutus.html">About Us</a>
+    <a href="contact.html">Contact Us</a>
+  </div>
+
+  <div class="nav-right">
+    <input type="text" placeholder="Search..." id="searchInput">
+    <button onclick="search()">Search</button>
+    <button onclick="reset()">Reset</button>
+  </div>
+</nav>
+
 
   <div class="homepage-content">
     <h1>Welcome to Travel Explorer 🌍</h1>
