--- a/travelRecommendation/contact.html
+++ b/travelRecommendation/contact.html
@@ -17,7 +17,7 @@
   </nav>
 
   <!-- Contact Form Section -->
-  <div class="contact-container">
+  <section class="contact-container">
     <h1>Get in Touch</h1>
     <p>If you have any questions, suggestions, or just want to say hi — we'd love to hear from you!</p>
 
@@ -27,7 +27,7 @@
       <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
       <button type="submit">Send Message</button>
     </form>
-  </div>
+  </section>
 
   <script>
     function submitForm(event) {
