--- a/travelRecommendation/aboutus.html
+++ b/travelRecommendation/aboutus.html
@@ -17,15 +17,15 @@
   </nav>
 
   <!-- About Us Section -->
-  <div class="about-container">
+  <section class="about-container">
     <h1>About Travel Explorer</h1>
     <p>
       Travel Explorer was founded with one mission: to help adventurers like you find the most stunning destinations on Earth. From iconic cities to hidden gems, we’re here to inspire and guide your next journey.
     </p>
-  </div>
+  </section>
 
   <!-- Team Section -->
-  <div class="team-container">
+  <section class="team-container">
     <h2>Our Team</h2>
     <div class="team-members">
       <div class="member">
@@ -45,7 +45,7 @@
         <p>Marketing Lead</p>
       </div>
     </div>
-  </div>
+  </section>
 
 </body>
 </html>
