--- a/travelRecommendation/index.html
+++ b/travelRecommendation/index.html
@@ -8,7 +8,7 @@
 
   <nav class="navbar">
   <div class="nav-left">
-    <a href="travel_recommendation.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="aboutus.html">About Us</a>
     <a href="contact.html">Contact Us</a>
   </div>
